<resources>
    <string name="app_name">Seguimiento Epidemiologico Dengue</string>
    <string name="s_usuario">Usuario</string>
    <string name="s_password">Contraseña</string>
    <string name="s_ingresar">Iniciar Sesión</string>

    <string name="s_next">Siguiente</string>
    <string name="s_backward">Atrás</string>

    <string name="idlugar">lugar de infeccion</string>
    <string name="direccion">direccion</string>
    <string name="departamento">departamento</string>
    <string name="provincia">provincia</string>
    <string name="distrito">distrito</string>
    <string name="latitud">latitud</string>
    <string name="longitud">longitud</string>

    <string name="f_paciente">FICHA PACIENTE - DENGUE</string>
    <string name="f_historia">Historia Clinica</string>
</resources>