<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btningresar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UbicacionInfeccion">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idlugar"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="139dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="188dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departamento"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="229dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provincia"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="276dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distrito"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="315dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitud"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="374dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitud"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="425dp" />

    <EditText
        android:id="@+id/iddireccion"
        android:layout_width="138dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="179dp" />

    <EditText
        android:id="@+id/iddepartamento"
        android:layout_width="126dp"
        android:layout_height="29dp"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="229dp" />

    <EditText
        android:id="@+id/idprovincia"
        android:layout_width="147dp"
        android:layout_height="26dp"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="276dp" />

    <EditText
        android:id="@+id/iddistrito"
        android:layout_width="158dp"
        android:layout_height="30dp"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="315dp" />

    <EditText
        android:id="@+id/idlongitud"
        android:layout_width="135dp"
        android:layout_height="31dp"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="361dp" />

    <EditText
        android:id="@+id/idlatitud"
        android:layout_width="148dp"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="408dp" />

    <EditText
        android:id="@+id/idlugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="125dp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="242dp"
        android:layout_height="169dp"
        map:cameraZoom="10"
        map:uiRotateGestures="true"
        map:uiZoomcontrols="true"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="468dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="reporte de Ubicacion"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="53dp" />
</androidx.constraintlayout.widget.ConstraintLayout>